--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.2/lightgallery.min.js"></script>
+    <!-- PayPal SDK will be loaded dynamically -->
   </body>
 </html>
